Transmitting elevator state to floor for its lamps.
- Also addressed some intelliJ warnings